--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
                         <li>Practica 1-</li>
                     </a>
                     
-                    <li>Practica 2-</li>
+                    <a href="Practica_2.html">
+                        <li>Practica 2-</li>
+                    </a>
                     <li>Practica 3-</li>
                 </ol>
             <li>Inicio</li>
