--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
                     <a href="Practica_2.html">
                         <li>Practica 2-</li>
                     </a>
-                    <li>Practica 3-</li>
+                    
+                    <a href="examen.html">
+                        <li>Practica 3-</li>
+                    </a>
                 </ol>
             <li>Inicio</li>
             <li>Inicio</li>
