--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     </a>
                     
                     <a href="examen.html">
-                        <li>Practica 3-</li>
+                        <li>Examen</li>
                     </a>
                 </ol>
             <li>Inicio</li>
