--- a/examen.html
+++ b/examen.html
@@ -2,7 +2,7 @@
 <html>
     <title>Walmart</title>
     <head>
-        <link rel="icon" type="image/png" href="Imagenes/walmart-png--512.png" >
+        <link rel="icon" type="image/png" href="imagenes/walmart-png--512.png" >
         <meta charset="utf-8">
         <meta name="author" content="Edgarin" >
         <style>
@@ -25,7 +25,7 @@
                 <a href></a>
             </nav>
         <figure>
-            <img src="Imagenes/a141fbc71fd4881866bf733b0d237d46.png" alt="Logo_Walmart" height="100px" style="position:static;" >
+            <img src="imagenes/a141fbc71fd4881866bf733b0d237d46.png" alt="Logo_Walmart" height="100px" style="position:static;" >
         </figure>
         <h1 style="color: white;">Bienvenido a Walmart!</h1>
             <p style="color: white; float:initial;">
@@ -43,7 +43,7 @@
             
         
         <figure>
-            <img src="Imagenes/k2-_090be3dd-c25a-4d33-a702-ca9795bfa169.v1.png"  alt="domicilio_Walmart" style="width: 50%; " >
+            <img src="imagenes/k2-_090be3dd-c25a-4d33-a702-ca9795bfa169.v1.png"  alt="domicilio_Walmart" style="width: 50%; " >
         </figure>
    </header> 
 
@@ -64,28 +64,28 @@
         <tbody>
             <tr>
                 <td>Head and Shoulders</td>
-                <td><img src="Imagenes/head_and_shoulders.png " alt="Imagen head and shoulders" style="width:300px ;"></td>
+                <td><img src="imagenes/head_and_shoulders.png " alt="Imagen head and shoulders" style="width:300px ;"></td>
                 <td>55.99 MXN</td>
                 <td>2X1 en todos los productos Head And Shoulders</td>
             </tr>
 
             <tr>
                 <td>Chocokrispis (490g)</td>
-                <td><img src="Imagenes/chocokrispis.png" alt="Imagen Chocokrispis" style="width: 300px;"></td>
+                <td><img src="imagenes/chocokrispis.png" alt="Imagen Chocokrispis" style="width: 300px;"></td>
                 <td>39.00 MXN</td>
                 <td>En la compra de 2 llevate el trecero con 40% de descuento</td>
             </tr>
 
             <tr>
                 <td>Leche Lala</td>
-                <td><img src="Imagenes/leche_lala.png" alt="Leche lala imagen" style="width: 300px;"></td>
+                <td><img src="imagenes/leche_lala.png" alt="Leche lala imagen" style="width: 300px;"></td>
                 <td>26.99 MXN</td>
                 <td>en la compra de 8 llevate totalmente gratis Chocokrispis(490g)</td>
             </tr>
 
             <tr>
                 <td>Desodorante Axe</td>
-                <td><img src="Imagenes/Desodorante_Axe.png" alt="imagen Axe" style="width: 300px;"> </td>
+                <td><img src="imagenes/Desodorante_Axe.png" alt="imagen Axe" style="width: 300px;"> </td>
                 <td>54.99 MXN</td>
                 <td>llevate un Axe gratis en la compra de 2 head and shoulders</td>
             </tr>
@@ -105,7 +105,7 @@
     <h4>Contactate con nosotros en redes sociales</h4>
     <h4>O bien escribenos un correo o Llamanos! al: 55-2-20-9000</h4>
     <a style="color: white;" href="mailto:edgarplanton9@gmail.com">Walmart correos.com</a>
-    <img src="Imagenes/a141fbc71fd4881866bf733b0d237d46.png" alt="Logo_pie" height="80px" style="float: right; width: 300px;">
+    <img src="imagenes/a141fbc71fd4881866bf733b0d237d46.png" alt="Logo_pie" height="80px" style="float: right; width: 300px;">
     <h4>Walmart.Todos los derechos reservados. &copy;2024.</h4>
    </footer>
 </body>
