--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
                     <a href="examen.html">
                         <li>Examen</li>
                     </a>
+
+                    <a href="https://upslpedu-my.sharepoint.com/:w:/g/personal/182607_upslp_edu_mx/EWedd3uswrlJq3Q4feV3e7IBWsr-mGytH-zbl6q7k3eq3w?e=rG6mBV">
+                        <li>1er Avance de proyecto</li>
+                    </a>
                 </ol>
             <li>Inicio</li>
             <li>Inicio</li>
