--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </a>
 
                     <a href="avance_proyecto.html">
-                        <li>Primer avance de proyecto</li>
+                        <li>Segundo avance de proyecto</li>
                     </a>
                     
                 </ol>
