--- a/index.html
+++ b/index.html
@@ -95,10 +95,15 @@
                         <li>1er Avance de proyecto</li>
                     </a>
 
-                    <a href="avance_proyecto.html">
+                    <a href="Practica2_U2.html">
                         <li>Segundo avance de proyecto</li>
                     </a>
-                    
+
+                    <p>Unidad 2</p>
+
+                    <a href="avance_proyecto.html">
+                        <li>Practica 2</li>
+                    </a>
                 </ol>
             <li>Inicio</li>
             <li>Inicio</li>
