--- a/Practica2_U2.html
+++ b/Practica2_U2.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Práctica 2 CSS</title>
-        <link rel="stylesheet" type="text/css" href="hoja.css">
+        <link rel="stylesheet" type="text/css" href="Hoja.css">
     </head>
     <body>
         <div id="contenedor">
