--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <p>Unidad 2</p>
 
                     <a href="Practica2_U2.html">
-                        <li>Practica 2</li>
+                        <li>Practica 2 Estilos</li>
                     </a>
                 </ol>
             <li>Inicio</li>
