--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
                     <a href="Practica2_U2.html">
                         <li>Practica 2 Estilos</li>
                     </a>
+
+                       <a href="Examen_Parcial2.html">
+                        <li>Examen Unidad 2</li>
+                    </a>
                 </ol>
             <li>Inicio</li>
             <li>Inicio</li>
