--- a/avance_proyecto.html
+++ b/avance_proyecto.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introducción a la Inteligencia Artificial Generativa</title>
+    <title>Inteligencia Artificial Generativa</title>
     <style>
+        li{
+            list-style: none;
+        }
         footer {
-            background-color: #333; /* Color de fondo del pie de página */
-            color: #fff; /* Color del texto del pie de página */
+            background-color: #333; 
+            color: #fff; 
             padding: 20px;
             text-align: center;
         }
@@ -22,20 +25,20 @@
         }
         .submit-button {
             padding: 10px 20px;
-            background-color: #007bff; /* Color del botón */
+            background-color: #007bff; 
             color: #fff;
             border: none;
             border-radius: 5px;
             cursor: pointer;
         }
         body {
-            background-color: #ffe4b2; /* Naranja muy claro */
+            background-color: #ffe4b2; 
         }
         h2 {
-            background-color: #e6e6fa; /* Morado claro */
+            background-color: #e6e6fa; 
             padding: 10px;
             border-radius: 5px;
-            text-align: center; /* Centra el texto */
+            text-align: center;
         }
     </style>
 </head>
@@ -59,9 +62,9 @@
         <h2>Estadísticas</h2>
        <img width="55%" src="im_av2/imagen2.png" alt="aqui">
        <h4>Estadísticas1.2</h4>
-        <img width="55%" src="im_av2/descarga.JFIF" alt="aqui">
+        <img width="55%" src="im_av2/descarga.jpg" alt="aqui">
         <h4>Estadísticas1.3</h4>
-        <img width="55%" src="im_av2/imagenn.JFIF" alt="aqui">
+        <img width="55%" src="im_av2/imagenn.jpg" alt="aqui">
     </section>
     <h2 color="purple">¿Cómo es que influye en los diferentes ámbitos de la sociedad?</h2>
     <p>
@@ -69,31 +72,46 @@
         <ul>
             <li>
                 <h2>Arte y Creatividad:</h2>
-                <p>La IAG ha revolucionado la forma en que se crea el arte. Desde la generación de pinturas y esculturas hasta la composición musical y la escritura de novelas, los sistemas generativos están produciendo obras creativas que desafían las nociones tradicionales de la creatividad humana. <a href="https://canalinnova.com/la-inteligencia-artificial-en-el-arte-creacion-y-reconocimiento/">pulsa para conocer mas </a></p>
-                <img width="25%" src="im_av2/arte.WEBP" alt="aqui">
+                <p>La IAG ha revolucionado la forma en que se crea el arte. Desde la generación de pinturas y esculturas hasta la composición musical y la escritura de novelas, los sistemas generativos están produciendo obras creativas que desafían las nociones tradicionales de la creatividad humana. 
+                <a href="https://canalinnova.com/la-inteligencia-artificial-en-el-arte-creacion-y-reconocimiento/">pulsa para conocer mas </a></p>
+                <img width="25%" src="im_av2/arte.PNG" alt="aqui">
             </li>
             <li>
                 <h2>Diseño y Moda:</h2>
-                <p>En la industria del diseño, la IAG se utiliza para crear nuevos diseños de productos, moda y arquitectura. Los algoritmos generativos pueden explorar una amplia gama de opciones de diseño y generar soluciones innovadoras y estéticamente atractivas.  <a href="https://canalinnova.com/la-inteligencia-artificial-en-el-arte-creacion-y-reconocimiento/">pulsa para conocer mas </a></p>
+                <p>En la industria del diseño, la IAG se utiliza para crear nuevos diseños de productos, moda y arquitectura. Los algoritmos generativos pueden explorar una amplia gama de opciones de diseño y generar soluciones innovadoras y estéticamente atractivas.  
+                <a href="https://canalinnova.com/la-inteligencia-artificial-en-el-arte-creacion-y-reconocimiento/">pulsa para conocer mas </a></p>
                 <img width="20%" src="im_av2/ia_moda.jpg" alt="aqui">
             </li>
             <li>
                 <h2>Medicina y Salud:</h2>
-                <p>En el campo de la medicina, la IAG se utiliza para el análisis de imágenes médicas, el descubrimiento de medicamentos y la personalización de tratamientos. Los sistemas generativos pueden ayudar a identificar patrones en grandes conjuntos de datos médicos y mejorar el diagnóstico y el tratamiento de enfermedades.<a href="https://www.bing.com/search?q=como+incfluye+la+ia+generativa+en+medicina+y+salud&qs=n&form=QBRE&sp=-1&ghc=1&lq=0&pq=como+incfluye+la+ia+generativa+en+medicina+y+salud&sc=7-50&sk=&cvid=F2D8ED58DDD74C7594940DF6C038705D&ghsh=0&ghacc=0&ghpl=">pulsa para conocer mas </a></p>
+                <p>En el campo de la medicina, la IAG se utiliza para el análisis de imágenes médicas, el descubrimiento de medicamentos y la personalización de tratamientos. Los sistemas generativos pueden ayudar a identificar patrones en grandes conjuntos de datos médicos y mejorar el diagnóstico y el tratamiento de enfermedades.
+                <a href="https://www.bing.com/search?q=como+incfluye+la+ia+generativa+en+medicina+y+salud&qs=n&form=QBRE&sp=-1&ghc=1&lq=0&pq=como+incfluye+la+ia+generativa+en+medicina+y+salud&sc=7-50&sk=&cvid=F2D8ED58DDD74C7594940DF6C038705D&ghsh=0&ghacc=0&ghpl=">pulsa para conocer mas </a></p>
                 <img width="27%" src="im_av2/SALUD.png" alt="aqui">
             </li>
             <li>
                 <h2>Educación:</h2>
-                <p>La IAG se está utilizando en la educación para crear contenido educativo personalizado y adaptativo. Los sistemas generativos pueden generar material de aprendizaje interactivo y personalizado que se adapta a las necesidades individuales de los estudiantes<a href="https://reports.globant.com/reports/2023/ai-applied/Globant-IA-Aplicada-Medios-y-Entretenimiento.pdf">pulsa para conocer mas </a></p>
+                <p>La IAG se está utilizando en la educación para crear contenido educativo personalizado y adaptativo. Los sistemas generativos pueden generar material de aprendizaje interactivo y personalizado que se adapta a las necesidades individuales de los estudiantes
+                <a href="https://reports.globant.com/reports/2023/ai-applied/Globant-IA-Aplicada-Medios-y-Entretenimiento.pdf">pulsa para conocer mas </a></p>
                 <img width="27%" src="im_av2/edu.jpg" alt="aqui">
             </li>
             <li>
                 <h2>Entretenimiento:</h2>
-                <p>En la industria del entretenimiento, la IAG se utiliza para crear efectos especiales en películas y videojuegos, generar música y crear personajes virtLos sistemas generativos pueden mejorar la experiencia de entretenimiento al ofrecer contenido único y personalizado.<a href="https://www.bing.com/search?q=como+incfluye+la+ia+generativa+en+publicidad++y+markting&qs=n&form=QBRE&sp=-1&ghc=1&lq=0&pq=como+incfluye+la+ia+generativa+en+publicidad++y+markting&sc=1-56&sk=&cvid=395560CAEF174B3BBA96FF7E166F5349&ghsh=0&ghacc=0&ghpl=">pulsa para conocer mas </a></p><img width="27%" src="im_av2/ent.jpg" alt="aqui">
+                <p>En la industria del entretenimiento, la IAG se utiliza para crear efectos especiales en películas y videojuegos, generar música y crear personajes virtLos sistemas generativos pueden mejorar la experiencia de entretenimiento al ofrecer contenido único y personalizado.
+                <a href="https://www.bing.com/search?q=como+incfluye+la+ia+generativa+en+publicidad++y+markting&qs=n&form=QBRE&sp=-1&ghc=1&lq=0&pq=como+incfluye+la+ia+generativa+en+publicidad++y+markting&sc=1-56&sk=&cvid=395560CAEF174B3BBA96FF7E166F5349&ghsh=0&ghacc=0&ghpl=">pulsa para conocer mas </a></p><img width="27%" src="im_av2/ent.jpg" alt="aqui">
             </li>
             <li>
                 <h2>Publicidad y Marketing:</h2>
-                <p>La IAG se utiliza en publicidad y marketing para personalizar las experiencias de los consumidores, generar contenido publicitario y predecir el comportamiento del consumidor. Los sistemas generativos pueden crear anuncios y campañas de marketing altamente efectivos y personalizados.<a href="https://www.bing.com/search?pglt=41&q=ia+generativa&cvid=889c04546c164e3097dc2215b7a4c976&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIGCAEQABhAMgYIAhAAGEAyBggDEAAYQDIGCAQQABhAMgYIBRAAGEAyBggGEAAYQDIGCAcQABhAMgYICBAAGEDSAQgzODIyajBqMagCALACAA&FORM=ANSPA1&PC=U531">pulsa para conocer mas </a></p><img width="27%" src="im_av2/mark.jpg" alt="aqui">
+                <p>La IAG se utiliza en publicidad y marketing para personalizar las experiencias de los consumidores, generar contenido publicitario y predecir el comportamiento del consumidor. Los sistemas generativos pueden crear anuncios y campañas de marketing altamente efectivos y personalizados.
+                <a href="https://www.bing.com/search?pglt=41&q=ia+generativa&cvid=889c04546c164e3097dc2215b7a4c976&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIGCAEQABhAMgYIAhAAGEAyBggDEAAYQDIGCAQQABhAMgYIBRAAGEAyBggGEAAYQDIGCAcQABhAMgYICBAAGEDSAQgzODIyajBqMagCALACAA&FORM=ANSPA1&PC=U531">pulsa para conocer mas </a></p><img width="27%" src="im_av2/mark.jpg" alt="aqui">
+            </li>
+
+            <li>
+                <h2>Estadísticas de Empresas mundiales</h2>
+                <iframe src="im_av2/Empresas.jpeg" width="50%" height="400px"  style="align-content: center;"></iframe>
+                
+            </li>
+
+            <li>
                 <h2>Selecciona un tema:</h2>
         <select>
             <option value="arte">Arte y Creatividad</option>
@@ -102,7 +120,7 @@
             <option value="educacion">Educación</option>
             <option value="entretenimiento">Entretenimiento</option>
             <option value="publicidad">Publicidad y Marketing</option>
-             <form class="email-form" action="mailto:correo@ejemplo.com" method="post" enctype="text/plain">
+             <form class="email-form" action="mailto:edgarplanton9@gmail.com" method="post" enctype="text/plain">
             <label for="email">Introduce tu correo:</label>
             <input type="email" id="email" name="email" class="email-input" required>
             <button type="submit" class="submit-button">
@@ -111,7 +129,10 @@
         </select>
             </li>
         </ul>
-    </section> <footer>
+    </section> 
+
+
+    <footer>
         <p>© 2024 - Derechos reservados.</p>
     </footer></p>
 
