--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
                     <a href="avance_proyecto.html">
                         <li>Segundo avance de proyecto</li>
                     </a>
-
-                    <p>Unidad 2</p>
-
+                </ol>
+            <li>Parcial 2</li>
+                <ol>
                     <a href="Practica2_U2.html">
                         <li>Practica 2 Estilos</li>
                     </a>
@@ -109,8 +109,15 @@
                         <li>Examen Unidad 2</li>
                     </a>
                 </ol>
-            <li>Inicio</li>
-            <li>Inicio</li>
+            
+            <li>Parcial 3</li>
+               <ol>
+
+                   
+                   <a href="menu_colom.html">
+                        <li>Practica 3</li>
+                    </a>
+               </ol>
         </ul>
 
     </body>
