--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
             
             <li>Parcial 3</li>
                <ol>
-
+                    <a href="Practica2_U3.html">
+                        <li>Practica 2</li>
+                    </a>
                    
                    <a href="menu_colom.html">
                         <li>Practica 3</li>
