--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
                     <a href="avance_proyecto.html">
                         <li>Segundo avance de proyecto</li>
                     </a>
+
+                    <a href="avance_proyecto_4.html">
+                        <li>Cuarto avance de proyecto</li>
+                    </a>
                 </ol>
             <li>Parcial 2</li>
                 <ol>
