--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
                    <a href="Practica4_U3.html">
                         <li>Practica 4</li>
                     </a>
+
+                   <a href="carrousel.html">
+                        <li>Practica 7</li>
+                    </a>
                </ol>
         </ul>
 
