--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
                    <a href="carrousel.html">
                         <li>Practica 7</li>
                     </a>
+
+                   <a href="Examen_par3.html">
+                        <li>Examen tercer parcial</li>
+                    </a>
                </ol>
         </ul>
 
