--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@
                         <li>Examen tercer parcial</li>
                     </a>
                </ol>
+
+            <li>Proyecto Final</li>
+            <a href="principal.html">
+                        <li>Proyecto Final</li>
         </ul>
 
     </body>
