--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
             
             <li>Parcial 3</li>
                <ol>
+                   <a href="Practica1_Par3.html">
+                        <li>Practica 1</li>
+                    </a>
+                   
                     <a href="Practica2_U3.html">
                         <li>Practica 2</li>
                     </a>
