--- a/index.html
+++ b/index.html
@@ -25,11 +25,22 @@
 
         <h2>Sobre el Alumno</h2>
         <h3>Autobiografia</h3>
-        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat pariatur obcaecati ea. Numquam expedita vitae porro harum nostrum, consequuntur ut. Excepturi recusandae voluptate temporibus eum aspernatur, facere rem inventore unde!</p>
+        <p> Primeros años
+Nací el 30 de junio de 2003 en la encantadora ciudad de San Luis Potosí, un lugar lleno de historia y cultura que ha influido profundamente en mi desarrollo personal. Desde pequeño, siempre he sentido una curiosidad innata por el mundo que me rodea, y mis padres, conscientes de esta característica, me alentaron a explorar mis intereses desde una edad temprana.
+
+Intereses y pasatiempos
+Uno de mis mayores pasatiempos ha sido, y sigue siendo, los videojuegos. A través de ellos, he encontrado una forma de escape y una manera de desafiar mi mente con problemas y estrategias complejas. No solo disfruto jugándolos, sino también analizando sus diseños y mecánicas, lo que ha despertado en mí un interés por la creatividad y el diseño.
+
+Mi creatividad no se limita solo a los videojuegos. Desde joven, me ha gustado experimentar con diferentes formas de expresión artística, ya sea a través del dibujo, la escritura o incluso la jardinería. Las plantas, en particular, han sido una pasión constante. Me encanta cuidar de ellas y observar cómo crecen y florecen con el tiempo, lo que me ha enseñado la importancia de la paciencia y el cuidado en todos los aspectos de la vida.
+
+Educación
+Actualmente, soy estudiante en la Universidad Politécnica de San Luis Potosí, una institución que me ha brindado la oportunidad de expandir mis conocimientos y habilidades en un entorno académico riguroso y estimulante. Mi tiempo en la universidad no solo ha sido una experiencia de aprendizaje académico, sino también una etapa crucial para mi desarrollo personal y profesional.
+
+Lectura y cine
+Otro de mis grandes placeres es la lectura. Sumergirme en un buen libro me permite explorar mundos nuevos y diferentes perspectivas, lo cual enriquece mi visión del mundo. De igual manera, disfruto mucho ir al cine. La combinación de la narrativa visual y auditiva en las películas me fascina, y siempre estoy dispuesto a ver una nueva película, ya sea un clásico del cine o el último estreno.</p>
 
         <br>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus incidunt eligendi omnis maxime maiores vel veniam, repellendus laborum reprehenderit iusto ipsum sapiente quos saepe quidem dicta dolorem ex soluta perspiciatis!</p>
 
         <h2>Mision de la Carrera</h2>
         <p>El programa educativo de la carrera de <b>Ingenieria en tenologias de la información</b> está comprometido 
